--- a/wpf_ui/MainWindow.xaml
+++ b/wpf_ui/MainWindow.xaml
@@ -4,9 +4,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:wpf_ui"
+        xmlns:vm="clr-namespace:wpf_ui.ViewModels" 
+        xmlns:views="clr-namespace:wpf_ui.Views"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Toy Store" 
+        Height="450" 
+        Width="800">
     <Grid>
-
+        <views:ToysListView />
     </Grid>
 </Window>
