--- a/wpf_ui/Views/CreateToyView.xaml
+++ b/wpf_ui/Views/CreateToyView.xaml
@@ -6,9 +6,9 @@
              xmlns:local="clr-namespace:wpf_ui.Views"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
-    <Grid>
-        <StackPanel Width="400px" HorizontalAlignment="Left">
-            <Label FontSize="30" Content="Create toy"/>
+    <DockPanel TextElement.FontSize="20">
+        <Label Padding="50 20 0 30" DockPanel.Dock="Top" FontSize="30" Content="Create toy"/>
+        <StackPanel Width="400px" HorizontalAlignment="Center" >
             <StackPanel>
                 <Label Content="Name"/>
                 <TextBox Grid.Column="1" Text="{Binding Name}"/>
@@ -29,7 +29,7 @@
                 <TextBox Text="{Binding Price}" Grid.Row="1"/>
 
                 <Label Content="Subject" Grid.Column="1"/>
-                <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Subjects}"/>
+                <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Subjects}" SelectedItem="{Binding SelectedSubject}"/>
             </Grid>
 
             <StackPanel Grid.ColumnSpan="2">
@@ -42,11 +42,11 @@
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Button Content="Add to store"/>
-                <Button Grid.Column="1" Content="Cancel" />
+                <Button Content="Add to store" Command="{Binding AddToStore}"/>
+                <Button Grid.Column="1" Content="Cancel" Command="{Binding Cancel}"/>
             </Grid>
         </StackPanel>
 
 
-    </Grid>
+    </DockPanel>
 </UserControl>
