--- a/wpf_ui/Views/AuthorizationView.xaml
+++ b/wpf_ui/Views/AuthorizationView.xaml
@@ -25,8 +25,8 @@
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Content="Sign In" Command="{Binding SignIn}" />
-                <Button Grid.Column="1" Content="Sign Up" Command="{Binding SignUp}" />
+                <Button Style="{StaticResource OptionBtn}" Content="Sign In" Command="{Binding SignIn}" />
+                <Button Style="{StaticResource OptionBtn}" Grid.Column="1" Content="Sign Up" Command="{Binding SignUp}" />
             </Grid>
         </StackPanel>
     </DockPanel>
