--- a/wpf_ui/Views/AuthorizationView.xaml
+++ b/wpf_ui/Views/AuthorizationView.xaml
@@ -8,25 +8,25 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <DockPanel TextElement.FontSize="20">
-        <Label Padding="50 20 0 30"  DockPanel.Dock="Top" Content="Authorization" FontSize="30" />
-        <StackPanel DockPanel.Dock="Top" Width="400px" Margin="0 50 0 0" HorizontalAlignment="Center">
+        <Label Padding="50 80 0 30"  DockPanel.Dock="Top" Content="Authorization" FontSize="30" />
+        <StackPanel DockPanel.Dock="Top" Width="400px" Margin="0 80 0 0" HorizontalAlignment="Center">
             <StackPanel>
                 <Label Content="Login" />
                 <TextBox Text="{Binding Login}" />
             </StackPanel>
 
-            <StackPanel>
+            <StackPanel Margin="0 10 0 0">
                 <Label Content="Password" />
                 <components:BindablePasswordBox Password="{Binding Password}" />
             </StackPanel>
 
-            <Grid>
+            <Grid Margin="0 10 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition/>
                     <ColumnDefinition/>
                 </Grid.ColumnDefinitions>
-                <Button Style="{StaticResource OptionBtn}" Content="Sign In" Command="{Binding SignIn}" />
-                <Button Style="{StaticResource OptionBtn}" Grid.Column="1" Content="Sign Up" Command="{Binding SignUp}" />
+                <Button Content="Sign In" Margin="0 0 5 0" Command="{Binding SignIn}" />
+                <Button Grid.Column="1" Margin="5 0 0 0" Content="Sign Up" Command="{Binding SignUp}" />
             </Grid>
         </StackPanel>
     </DockPanel>
