--- a/wpf_ui/Views/CreateToyView.xaml
+++ b/wpf_ui/Views/CreateToyView.xaml
@@ -7,14 +7,14 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="White">
     <DockPanel TextElement.FontSize="20">
-        <Label Padding="50 20 0 30" DockPanel.Dock="Top" FontSize="30" Content="Create toy"/>
-        <StackPanel Width="400px" HorizontalAlignment="Center" >
+        <Label Padding="30 60 0 30" DockPanel.Dock="Top" FontSize="30" Content="Create toy"/>
+        <StackPanel Width="400px" HorizontalAlignment="Center" Margin="0 80 0 0" >
             <StackPanel>
                 <Label Content="Name"/>
                 <TextBox Grid.Column="1" Text="{Binding Name, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
 
-            <Grid>
+            <Grid Margin="0 10 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
@@ -26,24 +26,24 @@
                 </Grid.RowDefinitions>
 
                 <Label Content="Price"/>
-                <TextBox Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1"/>
+                <TextBox Margin="0 0 5 0" Text="{Binding Price, UpdateSourceTrigger=PropertyChanged}" Grid.Row="1"/>
 
                 <Label Content="Subject" Grid.Column="1"/>
                 <ComboBox Grid.Column="1" Grid.Row="1" ItemsSource="{Binding Subjects}" SelectedItem="{Binding SelectedSubject, UpdateSourceTrigger=PropertyChanged}"/>
             </Grid>
 
-            <StackPanel Grid.ColumnSpan="2">
+            <StackPanel Grid.ColumnSpan="2" Margin="0 10 0 0">
                 <Label Content="Description"/>
-                <TextBox  Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
+                <TextBox Margin="5 0 0 0" Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}"/>
             </StackPanel>
 
-            <Grid>
+            <Grid Margin="0 10 0 0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition />
                     <ColumnDefinition />
                 </Grid.ColumnDefinitions>
-                <Button Content="Add to store" Command="{Binding AddToStore}"/>
-                <Button Grid.Column="1" Content="Cancel" Command="{Binding Cancel}"/>
+                <Button Margin="0 0 5 0" Content="Add to store" Command="{Binding AddToStore}"/>
+                <Button Margin="5 0 0 0" Grid.Column="1" Content="Cancel" Command="{Binding Cancel}"/>
             </Grid>
         </StackPanel>
 
